Layout bugfix.

--- a/src/tabs/styles.scss
+++ b/src/tabs/styles.scss
@@ -4,6 +4,7 @@
   position: relative;
   z-index: 1;
   margin-bottom: -1px;
+  flex: none;
 }
 
 .tab {
